give message on pages about visibility where appropriate. Fixes #67

--- a/media/style/main.css
+++ b/media/style/main.css
@@ -878,10 +878,11 @@ div.syntaxhighlighter {
 div.updateinfo {
   font-size: smaller;
   text-align: right;
-  margin-bottom: -1em;
+  margin-bottom: -0.5em;
   margin-right: 1em;
   margin-top: 2em;
   clear: right;
+  line-height: 1.25em;
 }
 
 /* advisornotes styles */
